--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ coreKtx = "1.17.0"
 espressoCore = "3.7.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
-koin = "4.2"
+koin = "4.2.0-RC1"
 kotlin = "2.3.10"
 lifecycleRuntimeKtx = "2.10.0"
 
