feat: Integrate Ktor for networking and configure API key
Integrates the Ktor client for handling network operations and sets up the API key retrieval from local properties.

- Adds a `NetworkModule` using Koin to provide the base URL and an `HttpClient` instance.
- Updates `AppModule` to provide the `API_KEY` from `BuildConfig`.
- Configures `build.gradle.kts` to read the `superHeroAPIKey` from `local.properties` and expose it through `BuildConfig`.
- Adds Ktor dependencies (`ktor-client-android`, `ktor-client-okhttp`, `ktor-client-cio`) to `libs.versions.toml` and `app/build.gradle.kts`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ coreKtx = "1.17.0"
 espressoCore = "3.7.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
+ktor = "3.4.0"
 koin = "4.2.0-RC1"
 kotlin = "2.3.10"
 lifecycleRuntimeKtx = "2.10.0"
@@ -25,6 +26,9 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+ktor = { group = "io.ktor", name = "ktor-client-android", version.ref = "ktor" }
+ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 
