feat: Integrate Kotzilla for remote configuration
Integrates the Kotzilla SDK for managing remote configurations and feature flags.

- Adds the Kotzilla plugin and the `kotzilla-sdk-compose` dependency.
- Configures the Kotzilla plugin in the root `build.gradle.kts`.
- Adds the `kotzilla.json` file with the necessary SDK configuration and keys.
- Adds various IDE settings for inspections, Git, and Gradle configuration.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ junitVersion = "1.3.0"
 ktor = "3.4.0"
 koin = "4.2.0-RC1"
 kotlin = "2.3.10"
+kotzilla = "2.0.3"
 lifecycleRuntimeKtx = "2.10.0"
 
 [libraries]
@@ -31,8 +32,9 @@ ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.r
 ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
+kotzilla-sdk-compose = { group = "io.kotzilla", name = "kotzilla-sdk-compose", version.ref = "kotzilla" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+kotzilla = { id = "io.kotzilla.kotzilla-plugin", version.ref = "kotzilla" }
