feat: Add new dependencies and update app icon
Integrates new dependencies for ads and utilities, and replaces the application icon with a new design.

- Adds the `unity3D-ads` and `frogo-sdk` dependencies to `libs.versions.toml` and `app/build.gradle.kts`.
- Adds the JitPack repository to `settings.gradle.kts` to resolve the new dependencies.
- Introduces new permissions in `AndroidManifest.xml` for `POST_NOTIFICATIONS` and `AD_ID`.
- Adds a `getSuperHeroById` method to `MainViewModel`.
- Injects `MainViewModel` into `MainActivity`.
- Replaces the old launcher icon with a new SVG-based adaptive icon (`superheroapplogo.xml`), updating foreground and background resources.
- Deletes the old `mipmap-anydpi` launcher icon XML files.
- Adds `lint-baseline.xml` to manage lint warnings.
- Uncomments the lint baseline configuration in `app/build.gradle.kts`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ kotlin = "2.3.10"
 kotzilla = "2.0.3"
 ktor = "3.4.0"
 lifecycleRuntimeKtx = "2.10.0"
+frogoAndroid = "2.3.6"
+unity3DAds = "4.16.6"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -28,6 +30,7 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 facebook-android-sdk = { group = "com.facebook.android", name = "facebook-android-sdk", version.ref = "facebook" }
+frogo-android = { group = "com.github.frogobox", name = "frogo-sdk", version.ref = "frogoAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
@@ -41,6 +44,7 @@ ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref =
 ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
 ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
+unity3D-ads = { group = "com.unity3d.ads", name = "unity-ads", version.ref = "unity3DAds" }
 
 
 [plugins]
