refactor: Implement state management for superhero list and fix DTOs
Refactors the main screen to handle different UI states (Loading, Success, Error) for fetching the superhero list and improves the data layer.

- Implements `SuperheroState` (Idle, Loading, Success, Error) in `MainViewModel` to manage the UI state.
- Updates `MainActivity` to observe the state from the `MainViewModel` and display the appropriate UI (loading indicator, error message, or list of heroes).
- Uses a `LaunchedEffect` in `MainActivity` to trigger fetching the heroes only once.
- Adds the Kotlin Serialization plugin to `app/build.gradle.kts` and `gradle/libs.versions.toml`.
- Makes the `race` and `publisher` properties in `SuperHeroAppearanceDTO` and `SuperHeroBiographyDTO` nullable (`String?`) to prevent deserialization crashes with null API values.
- Explicitly types the Ktor client's `body()` call in `SuperHeroAPIService` to `List<SuperHeroDTO>` for type safety.
- Restructures `NetworkModule.kt` for better readability.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -50,4 +50,5 @@ unity3D-ads = { group = "com.unity3d.ads", name = "unity-ads", version.ref = "un
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotzilla = { id = "io.kotzilla.kotzilla-plugin", version.ref = "kotzilla" }
