feat: Integrate Coil for image loading
Integrates the Coil library for image loading in Jetpack Compose.

- Adds the `coil-compose` dependency to `libs.versions.toml`.
- Includes the Coil implementation in `app/build.gradle.kts`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 activityCompose = "1.12.3"
 agp = "9.0.0"
+coil = "3.3.0"
 composeBom = "2026.01.01"
 coreKtx = "1.17.0"
 espressoCore = "3.7.0"
@@ -29,6 +30,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
 facebook-android-sdk = { group = "com.facebook.android", name = "facebook-android-sdk", version.ref = "facebook" }
 frogo-android = { group = "com.github.frogobox", name = "frogo-sdk", version.ref = "frogoAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
