feat: Display superhero list with images
Renders the list of superheroes using a `LazyColumn` and displays their images with Coil.

- Updates `MainActivity.kt` to use a `LazyColumn` for displaying the list of heroes fetched from the view model.
- Uses `coil3.compose.AsyncImage` to load and display each superhero's image.
- Adds an `image` property to the `SuperHero` data model.
- Maps the `images.md` URL from `SuperHeroDTO` to the `image` property in the `SuperHero` model.
- Adds the `coil-network-ktor` dependency to enable Coil to load images with Ktor.
- Includes the `androidx.compose.material3` dependency.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ ktor = "3.4.0"
 lifecycleRuntimeKtx = "2.10.0"
 frogoAndroid = "2.3.6"
 unity3DAds = "4.16.6"
+material3 = "1.4.0"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -30,7 +31,9 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+coil-network-ktor = { group = "io.coil-kt.coil3", name = "coil-network-ktor3", version.ref = "coil" }
 facebook-android-sdk = { group = "com.facebook.android", name = "facebook-android-sdk", version.ref = "facebook" }
 frogo-android = { group = "com.github.frogobox", name = "frogo-sdk", version.ref = "frogoAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
